@@ -353,11 +353,12 @@ class MemoryCache(BaseCache):
             raise NotImplementedError
 
         logger.info("listening on channel '%s' of '%s'", cls._channel, dbname)
-        conn = database.get_connection(autocommit=True)
         pid = os.getpid()
         selector = selectors.DefaultSelector()
         current_thread = threading.current_thread()
+        conn = None
         try:
+            conn = database.get_connection(autocommit=True)
             cursor = conn.cursor()
             cursor.execute('LISTEN "%s"' % cls._channel)
             current_thread.listening = True
@@ -381,7 +382,8 @@ class MemoryCache(BaseCache):
             raise
         finally:
             selector.close()
-            database.put_connection(conn)
+            if conn:
+                database.put_connection(conn)
             with cls._listener_lock[pid]:
                 if cls._listener.get((pid, dbname)) == current_thread:
                     del cls._listener[pid, dbname]
