@@ -1,3 +1,4 @@
+* Catch get_connection errors in Cache listener
 * Compute cron job scheduling using server timezone
 * Reset less often the user sessions
 * Add option to strip leading and trailing whitespace from fields.Char
